Enable option to provision a PostgreSQL DB
This commits enables the spec.CreateNewPostgreSQL attribute (previsouly
present but unused). When set to true, the Synapse Operator will
automatically:
* Provision a PostgreSQL Cluster
* Create a "synapse" database correctly configured for the "synapse"
user.
* Register the database connection information into
spec.status.databaseConnectionInfo
* Edit the homeserver.yaml configuration file - inside the ConfigMap given by
spec.HomeserverConfigMapName - to configure the synapse instance to
connect to the newly created Database.

This creates a dependency from the Synapse Operator to the Crunchy
postgres-operator. This dependency is currenly not checked.

Closes #9

--- a/config/crd/bases/synapse.opdev.io_synapses.yaml
+++ b/config/crd/bases/synapse.opdev.io_synapses.yaml
@@ -38,8 +38,7 @@ spec:
             properties:
               createNewPostgreSQL:
                 default: false
-                description: Set to true to create a new PostreSQL instance. Currently
-                  not implemented
+                description: Set to true to create a new PostreSQL instance.
                 type: boolean
               homeserverConfigMapName:
                 description: Name of the ConfigMap holding the homeserver.yaml config
@@ -54,7 +53,7 @@ spec:
             description: SynapseStatus defines the observed state of Synapse
             properties:
               databaseConnectionInfo:
-                description: Connection information to the extrnal PostgreSQL Database
+                description: Connection information to the external PostgreSQL Database
                 properties:
                   State:
                     description: State of the PostgreSQL database
@@ -62,8 +61,14 @@ spec:
                   connectionURL:
                     description: Endpoint to connect to the PostgreSQL database
                     type: string
-                  instanceName:
-                    description: Name of the PostgreSQL instance
+                  databaseName:
+                    description: Name of the database to connect to
+                    type: string
+                  password:
+                    description: Base64 encoded password
+                    type: string
+                  user:
+                    description: User allowed to query the given database
                     type: string
                 type: object
               homeserverConfiguration:
