Add validation webhook - Incomplete

--- a/config/samples/synapse_v1alpha1_synapse.yaml
+++ b/config/samples/synapse_v1alpha1_synapse.yaml
@@ -6,4 +6,5 @@ spec:
   createNewPostgreSQL: true
   homeserver:
     configMap:
-      name: synapse-homeserver-simple
+      name: synapse-homeserver
+
